tests/error/modifier_errors/captured_var_inout_own2.err
Error: Not owned (at $FILE:15:20)
   | 
13 |     with dagger:
14 |         with power(3):
15 |             discard(a)
   |                     ^ Function `discard` wants to take ownership of this argument,
   |                       but we cannot transfer ownership inside a modifier body

Notes:
   | 
11 | def test() -> None:
12 |     a = qubit()
   |     - Argument `a` defined here ...
13 |     with dagger:
14 |         with power(3):
   |              -------- outside the modifier block

Guppy compilation failed due to 1 previous error
